[package]
name = "WorkoutIterator"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
chrono = "0.4.40"
iced = { version = "0.13.1", features = ["image"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
winres = "0.1.12"
